--- a/web/html/팝업-가계약조회리스트.html
+++ b/web/html/팝업-가계약조회리스트.html
@@ -14,7 +14,15 @@
     $(function () {
       $(".contract_scroll").mCustomScrollbar({
         scrollInertia: 150
-      });      
+      });  
+      $(document).on("click", ".insurance_list.check_list .insurance", function () {
+        var target = $(this);
+        if (!target.hasClass("checked")) {
+          target.addClass("checked");
+        } else {
+          target.removeClass("checked");
+        }
+      })    
     })
   </script>
 </head>
@@ -41,7 +49,7 @@
         </li>
         <li>
           <div class="radio_set">
-            <input id="radio3" name="search_condition" type="radio">
+            <input id="radio3" name="search_condition" type="radio" checked>
             <label for="radio3">1개월</label>
           </div>
         </li>
@@ -55,132 +63,142 @@
       <div class="date">2019.09.25 ~2019.10.25</div>
     </div>
     <div class="contract_scroll">
-      <!-- insurance_list : s -->
-      <div class="insurance_list">
-        <div class="insurance" href="#">
-          <div class="info">
-            <div class="inner">
-              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
-              <div class="date"><span class="state">심사대상</span>106200573201910141</div>
-              <button class="btn_edit"><span>편집</span></button>
+      <!-- insurance_list : s  -19.12.20 수정-->
+      <div class="insurance_list check_list">
+        <div class="insurance_info">
+          <button class="insurance checked">
+            <div class="info">
+              <div class="inner">
+                <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
+                <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+              </div>
             </div>
-          </div>
-          <div class="payment">
-            <ul>
-              <li class="top">
-                <span class="th">보험료</span>
-                <span class="td"><strong>1,000,000</strong>원</span>
-              </li>
-              <li>
-                <span class="th">납입만기</span>
-                <span class="td">20년(100세)</span>
-              </li>
-              <li>
-                <span class="th">청약일</span>
-                <span class="td">2019.10.14</span>
-              </li>
-            </ul>
-          </div>
+            <div class="payment">
+              <ul>
+                <li class="top">
+                  <span class="th">보험료</span>
+                  <span class="td"><strong>1,000,000</strong>원</span>
+                </li>
+                <li>
+                  <span class="th">납입만기</span>
+                  <span class="td">20년(100세)</span>
+                </li>
+                <li>
+                  <span class="th">청약일</span>
+                  <span class="td">2019.10.14</span>
+                </li>
+              </ul>
+            </div>
+          </button>
+          <button class="btn_edit"><span>편집</span></button>
         </div>
-        <div class="insurance" href="#">
-          <div class="info">
-            <div class="inner">
-              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
-              <div class="date"><span class="state">심사대상</span>106200573201910141</div>
-              <button class="btn_edit"><span>편집</span></button>
+        <div class="insurance_info">
+          <button class="insurance">
+            <div class="info">
+              <div class="inner">
+                <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
+                <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+              </div>
             </div>
-          </div>
-          <div class="payment">
-            <ul>
-              <li class="top">
-                <span class="th">보험료</span>
-                <span class="td"><strong>1,000,000</strong>원</span>
-              </li>
-              <li>
-                <span class="th">납입만기</span>
-                <span class="td">20년(100세)</span>
-              </li>
-              <li>
-                <span class="th">청약일</span>
-                <span class="td">2019.10.14</span>
-              </li>
-            </ul>
-          </div>
+            <div class="payment">
+              <ul>
+                <li class="top">
+                  <span class="th">보험료</span>
+                  <span class="td"><strong>1,000,000</strong>원</span>
+                </li>
+                <li>
+                  <span class="th">납입만기</span>
+                  <span class="td">20년(100세)</span>
+                </li>
+                <li>
+                  <span class="th">청약일</span>
+                  <span class="td">2019.10.14</span>
+                </li>
+              </ul>
+            </div>
+          </button>
+          <button class="btn_edit"><span>편집</span></button>
         </div>
-        <div class="insurance" href="#">
-          <div class="info">
-            <div class="inner">
-              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
-              <div class="date"><span class="state">심사대상</span>106200573201910141</div>
-              <button class="btn_edit"><span>편집</span></button>
+        <div class="insurance_info">
+          <button class="insurance checked">
+            <div class="info">
+              <div class="inner">
+                <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
+                <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+              </div>
             </div>
-          </div>
-          <div class="payment">
-            <ul>
-              <li class="top">
-                <span class="th">보험료</span>
-                <span class="td"><strong>1,000,000</strong>원</span>
-              </li>
-              <li>
-                <span class="th">납입만기</span>
-                <span class="td">20년(100세)</span>
-              </li>
-              <li>
-                <span class="th">청약일</span>
-                <span class="td">2019.10.14</span>
-              </li>
-            </ul>
-          </div>
+            <div class="payment">
+              <ul>
+                <li class="top">
+                  <span class="th">보험료</span>
+                  <span class="td"><strong>1,000,000</strong>원</span>
+                </li>
+                <li>
+                  <span class="th">납입만기</span>
+                  <span class="td">20년(100세)</span>
+                </li>
+                <li>
+                  <span class="th">청약일</span>
+                  <span class="td">2019.10.14</span>
+                </li>
+              </ul>
+            </div>
+          </button>
+          <button class="btn_edit"><span>편집</span></button>
         </div>
-        <div class="insurance" href="#">
-          <div class="info">
-            <div class="inner">
-              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
-              <div class="date"><span class="state">심사대상</span>106200573201910141</div>
-              <button class="btn_edit"><span>편집</span></button>
+        <div class="insurance_info">
+          <button class="insurance">
+            <div class="info">
+              <div class="inner">
+                <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
+                <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+              </div>
             </div>
-          </div>
-          <div class="payment">
-            <ul>
-              <li class="top">
-                <span class="th">보험료</span>
-                <span class="td"><strong>1,000,000</strong>원</span>
-              </li>
-              <li>
-                <span class="th">납입만기</span>
-                <span class="td">20년(100세)</span>
-              </li>
-              <li>
-                <span class="th">청약일</span>
-                <span class="td">2019.10.14</span>
-              </li>
-            </ul>
-          </div>
+            <div class="payment">
+              <ul>
+                <li class="top">
+                  <span class="th">보험료</span>
+                  <span class="td"><strong>1,000,000</strong>원</span>
+                </li>
+                <li>
+                  <span class="th">납입만기</span>
+                  <span class="td">20년(100세)</span>
+                </li>
+                <li>
+                  <span class="th">청약일</span>
+                  <span class="td">2019.10.14</span>
+                </li>
+              </ul>
+            </div>
+          </button>
+          <button class="btn_edit"><span>편집</span></button>
         </div>
-        <div class="insurance" href="#">
-          <div class="info">
-            <div class="inner">
-              <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
-              <div class="date"><span class="state">심사대상</span>106200573201910141</div>
-              <button class="btn_edit"><span>편집</span></button>
+        <div class="insurance_info">
+          <button class="insurance">
+            <div class="info">
+              <div class="inner">
+                <div class="name">(무)메리츠 케어프리보험 M-Basket1910</div>
+                <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+              </div>
             </div>
-          </div>
-          <div class="payment">
-            <ul>
-              <li class="top">
-                <span class="th">보험료</span>
-                <span class="td"><strong>1,000,000</strong>원</span>
-              </li>
-              <li>
-                <span class="th">납입만기</span>
-                <span class="td">20년(100세)</span>
-              </li>
-              <li>
-                <span class="th">청약일</span>
-                <span class="td">2019.10.14</span>
-              </li>
-            </ul>
-          </div>
+            <div class="payment">
+              <ul>
+                <li class="top">
+                  <span class="th">보험료</span>
+                  <span class="td"><strong>1,000,000</strong>원</span>
+                </li>
+                <li>
+                  <span class="th">납입만기</span>
+                  <span class="td">20년(100세)</span>
+                </li>
+                <li>
+                  <span class="th">청약일</span>
+                  <span class="td">2019.10.14</span>
+                </li>
+              </ul>
+            </div>
+          </button>
+          <button class="btn_edit"><span>편집</span></button>
         </div>
       </div>
       <!-- insurance_list : e -->
