--- a/web/보장분석_00.index.html
+++ b/web/보장분석_00.index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>보장분석 HTML LIST</title>
-<link rel="stylesheet" type="text/css" href="cssu.renew.style.css">
+<link rel="stylesheet" type="text/css" href="css/gu.renew.style.css">
 <style type="text/css">
 /* page title */
 .g_location {height:35px;padding-bottom:5px;border-bottom:1px solid #e1e1e1;color:#3a3635;}
@@ -77,7 +77,7 @@ html, body {background:#fff;}
 						<td class="dep2">분석목록(고객목록)</td>
 						<td class="scr_name">검색결과(전체)</td>
 						<td class="scr_id">
-							<a href="htmlndex.html" target="_blank">index</a>
+							<a href="html/index.html" target="_blank">index</a>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note">
@@ -89,7 +89,7 @@ html, body {background:#fff;}
 						<td class="dep2">분석상세(고객상세)</td>
 						<td class="scr_name">전체현황</td>
 						<td class="scr_id">
-							<a href="htmlub.html" target="_blank">02.고객상세_01.전체현황.html</a>
+							<a href="html/sub.html" target="_blank">02.고객상세_01.전체현황.html</a>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note">
@@ -101,7 +101,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name">가입현황</td>
 						<td class="scr_id">
-							<a href="html입현황.html" target="_blank">02.고객상세_02.가입현황.html</a>
+							<a href="html/가입현황.html" target="_blank">02.고객상세_02.가입현황.html</a>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note">
@@ -113,9 +113,9 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name">진단상세</td>
 						<td class="scr_id">
-							<a href="#" target="_blank"></a>
+							<a href="html/진단상세.html" target="_blank">02.고객상세_03.진단상세.html</a>
 						</td>
-						<td class="date"></td>
+						<td class="date">2019.12.20</td>
 						<td class="note">
 							<strong></strong>
 						</td>
@@ -125,7 +125,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name">컨설팅</td>
 						<td class="scr_id">
-							<a href="html설팅.html" target="_blank">02.고객상세_04.컨설팅.html</a>
+							<a href="html/컨설팅.html" target="_blank">02.고객상세_04.컨설팅.html</a>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note"><strong></strong></td>
@@ -135,7 +135,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name">그래프</td>
 						<td class="scr_id">
-							<a href="html래프.html" target="_blank">02.고객상세_05.그래프.html</a>
+							<a href="html.그래프.html" target="_blank">02.고객상세_05.그래프.html</a>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note"><strong></strong></td>
@@ -146,7 +146,7 @@ html, body {background:#fff;}
 						<td class="dep2">팝업</td>
 						<td class="scr_name">index</td>
 						<td class="scr_id">
-							<a href="html업-고객등록동의문자발송.html" target="_blank">팝업-고객등록동의문자발송.html</a>
+							<a href="html/팝업-고객등록동의문자발송.html" target="_blank">팝업-고객등록동의문자발송.html</a>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note"></td>
@@ -156,7 +156,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name">가입현황</td>
 						<td class="scr_id">
-							<a href="html업-보장상세내역.html" target="_blank">팝업_보장 상세내역.html</a><br>
+							<a href="html/팝업-보장상세내역.html" target="_blank">팝업_보장 상세내역.html</a><br>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note">
@@ -168,7 +168,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name"></td>
 						<td class="scr_id">
-							<a href="html업-보장상세내역(해지).html" target="_blank">팝업_보장 상세내역(해지).html</a><br>
+							<a href="html/팝업-보장상세내역(해지).html" target="_blank">팝업_보장 상세내역(해지).html</a><br>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note">
@@ -179,7 +179,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name">컨설팅</td>
 						<td class="scr_id">
-							<a href="html업-가계약%20추가.html" target="_blank">팝업_가계약 추가.html</a><br>
+							<a href="html/팝업-가계약%20추가.html" target="_blank">팝업_가계약 추가.html</a><br>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note">
@@ -190,7 +190,19 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name"></td>
 						<td class="scr_id">
-							<a href="html업-가계약조회리스트.html" target="_blank">팝업_가계약조회리스트.html</a><br>
+							<a href="html/팝업-가계약조회리스트.html" target="_blank">팝업_가계약조회리스트.html</a><br>
+						</td>
+						<td class="date">2019.12.13,</td>
+						<td class="note">
+							<strong>2019.19.20</strong>디자인변경에 따른 구조변경 
+						</td>
+					</tr>
+					<tr>
+						<td class="dep1"></td>
+						<td class="dep2"></td>
+						<td class="scr_name"></td>
+						<td class="scr_id">
+							<a href="html/팝업-컨설팅전후비교.html" target="_blank">팝업_컨설팅전후비교.html</a><br>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note">
@@ -201,18 +213,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name"></td>
 						<td class="scr_id">
-							<a href="html업-컨설팅전후비교.html" target="_blank">팝업_컨설팅전후비교.html</a><br>
-						</td>
-						<td class="date">2019.12.13</td>
-						<td class="note">
-						</td>
-					</tr>
-					<tr>
-						<td class="dep1"></td>
-						<td class="dep2"></td>
-						<td class="scr_name"></td>
-						<td class="scr_id">
-							<a href="html업-권장금액보장군설정.html" target="_blank">팝업_권장금액보장군설정.html</a><br>
+							<a href="html/팝업-권장금액보장군설정.html" target="_blank">팝업_권장금액보장군설정.html</a><br>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note">
@@ -233,7 +234,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name"></td>
 						<td class="scr_id">
-							<a href="htmluide.html" target="_blank">form, button 가이드</a>
+							<a href="html/guide.html" target="_blank">form, button 가이드</a>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note"><strong></strong></td>
